@@ -66,6 +66,7 @@ powerUpSpread_tip         "SPREAD"
 powerUpHeatSeek_tip       "HEAT SEEK"
 powerUpBulletDistance_tip "BULLET RANGE"
 powerUpBounce_tip         "BOUNCE"
+powerUpCornering_tip      "BULLET CORNERING"
 powerUpExplode_tip        "BURST"
 
 powerUpHeartSetCombo_tipPart1  "SURVIVE"
